--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "jspdf": "^3.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^7.9.6"
+    "react-router-dom": "^7.9.6",
+    "recharts": "^3.5.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.1",
